--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,9 @@ dependencies {
 
     implementation 'io.github.tickatch:common-lib:0.0.4'
 
+    // Prometheus
+    implementation 'io.prometheus:simpleclient_pushgateway:0.16.0'
+
     // lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
