--- a/build.gradle
+++ b/build.gradle
@@ -72,7 +72,7 @@ dependencies {
     implementation 'io.github.tickatch:common-lib:0.0.4'
 
     // Prometheus
-    implementation 'io.prometheus:simpleclient_pushgateway:0.16.0'
+    implementation 'io.prometheus:prometheus-metrics-exporter-pushgateway'
 
     // lombok
     compileOnly 'org.projectlombok:lombok'
